# cascs

./: .gitignore  LICENSE  casc_company_house.csv  cascs.csv  cascs.json  cascs_id_lookup.csv  pyproject.toml  readme.md  requirements.in  requirements.txt
.github/workflows/: pythonapp.yml
cascs/: __main__.py  fetch_cascs.py  utils.py
