[project]
name = "cascs"
version = "1.0.0"
description = "This project creates and stores a list of Community Amateur Sports Clubs (CASC), a type of non profit organisation registered in the UK with HMRC."
readme = "readme.md"
authors = [{ name = "David Kane", email = "david@threesixtygiving.org" }]
requires-python = ">=3.13"
dependencies = [
    "requests-html",
    "ruff",
    "pyexcel-ods3",
    "titlecase",
    "lxml[html_clean]",
]


[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = ['E501']
